# dp-fedlora

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/dataset/: chestmnist.yaml  dermamnist.yaml  pathmnist.yaml
conf/fl/: fedavg.yaml
conf/model/: vit_b16.yaml  vit_b16_lora.yaml  vit_b16_lora_r32.yaml  vit_b16_lora_r4.yaml  vit_b16_lora_r8.yaml
conf/privacy/: dp_sgd.yaml
notebooks/: run_gpu_experiments.ipynb
paper/: dp_fedlora.tex  fig1.tex  gpu_table3.tex  gpu_table4.tex  references.bib
pipeline/: fill_gpu_results.py  sweep_epsilon.ps1  sweep_lora_epsilon.ps1  train.py
plan/: notes.md  proposal-card-a.md  research-question-card.md  task_plan.md
src/data_module/: __init__.py  dataset.py
src/fl_module/: __init__.py  client.py  server.py  simulation.py
src/model_module/: __init__.py  backbone.py  lora_utils.py
src/utils/: __init__.py  metrics.py  seed.py
theory/: bounds.md  rdp_analysis.py
