[project]
name = "dp-fedlora"
version = "0.1.0"
description = "DP-FedLoRA: Differentially Private Federated Fine-Tuning of VLMs for Multi-Site Medical Imaging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    # Federated learning
    "flwr[simulation]>=1.8.0",
    # Differential privacy
    "opacus>=1.4.0",
    # Medical imaging datasets
    "medmnist>=3.0.0",
    # Config management
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    # Foundation model + PEFT (Month 3 LoRA)
    "transformers>=4.40.0",
    "peft>=0.10.0",
    # Evaluation
    "scikit-learn>=1.4.0",
    # Data handling
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Visualisation
    "matplotlib>=3.8.0",
    # Logging / progress
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
